--- a/app/views/applications/drywall.html.erb
+++ b/app/views/applications/drywall.html.erb
@@ -8,7 +8,7 @@ Once you try it you’ll never go back.</h3>
 			<ul class="highlights">
 				<li>Fasten drywall faster and more efficiently than ever before.</li>
 				<li>Ergonomically friendly - no more stabbed fingers when reaching for every screw.</li>
-				<li>Adjustable depth control for repeatable countersinking - no raised screw heads</li>
+				<li>Adjustable depth control for repeatable countersinking - no raised screw heads!</li>
 				<li>Countless labour and material savings on every job.</li>
 				<li>No more dropped screws.</li>
 			</ul>
