--- a/app/views/applications/more_applications.html.erb
+++ b/app/views/applications/more_applications.html.erb
@@ -2,8 +2,7 @@
 
 <img src="/applications/more_applications/banner.jpg" alt="More Muro Signature Product Application" class="more-applications">
 
-<h3 class="catch-phrase">Roofing will never be the same on your job-site
-with our Auto Feed Screw Driving systems at your disposal.</h3>
+<h3 class="catch-phrase">Find the recommended tool for your application below.</h3>
 
 <!-- <a href="#VL62-SH">Go to VL62-SH</a> -->
 
@@ -21,7 +20,7 @@ with our Auto Feed Screw Driving systems at your disposal.</h3>
       </tr>
 
       <tr>
-        <td class="grey bold">Screw Length Range (inches)</td>
+        <td class="light-grey bold">Screw Length Range (inches)</td>
       </tr>
 
       <tr>
@@ -29,282 +28,285 @@ with our Auto Feed Screw Driving systems at your disposal.</h3>
       </tr>
 
       <tr>
-        <td class="grey bold">RPM</td>
+        <td class="light-grey bold">RPM</td>
       </tr>
     </thead>
 
       <tr class="top-border">
-        <th class="bold">APPLICATION</th>
+        <th class="grey bold">APPLICATION</th>
       </tr>
 
       <tr class="top-border">
-        <th class="grey" style="font-size: 1.2em;">Magazine Mount</th>
+        <th class="light-grey" style="font-size: 1.2em;">Magazine Mount</th>
       </tr>
 
-      <tr class="top-border">
+
+      <tr class="application application top-border">
         <td class="tool">Fastening Sub Floor (wood/cement boards)</td>
       </tr>
 
-      <tr class="top-border">
+      <tr class="application top-border">
         <td class="tool">Decks Construction</td>
       </tr>
 
-      <tr class="top-border">
+      <tr class="application top-border">
         <td class="tool">Docks Construction</td>
       </tr>
 
-      <tr class="top-border">
+      <tr class="application top-border">
         <td class="tool">Fastening Underlayment</td>
       </tr>
 
-       <tr class="top-border">
+       <tr class="application top-border">
         <td class="tool">Fence Building</td>
       </tr>
 
-      <tr class="top-border">
+      <tr class="application top-border">
         <td class="tool">Stair Treads</td>
       </tr>
 
-      <tr class="top-border">
+      <tr class="application top-border">
         <td class="tool">Wood Framing </td>
       </tr>
 
-      <tr class="top-border">
+      <tr class="application top-border">
         <td class="tool">Attaching Roof Boards</td>
       </tr>
 
-      <tr class="top-border">
+      <tr class="application top-border">
         <td class="tool">Slotted Panels - Garage Storage Systems</td>
       </tr>
 
-      <tr class="top-border">
+      <tr class="application top-border">
         <td class="tool">Store Fixtures</td>
       </tr>
 
-       <tr class="top-border">
+       <tr class="application top-border">
         <td class="tool">Drywall or Wood to Light Metal Studs</td>
       </tr>
 
-      <tr class="top-border">
+      <tr class="application top-border">
         <td class="tool">Drywall or Wood to Wood Studs</td>
       </tr>
 
-      <tr class="top-border">
+      <tr class="application top-border">
         <td class="tool">Fastening Cement Board (Walls)</td>
       </tr>
 
-      <tr class="top-border">
+      <tr class="application top-border">
         <td class="tool">Fastening Chipboard</td>
       </tr>
 
-      <tr class="top-border">
+      <tr class="application top-border">
         <td class="tool">Fastening Sheathing</td>
       </tr>
 
-      <tr class="top-border">
+      <tr class="application top-border">
         <td class="tool">Furniture Manufacturing</td>
       </tr>
 
-      <tr class="top-border">
+      <tr class="application top-border">
         <td class="tool">Fabrication / Repair Pallets</td>
       </tr>
 
-       <tr class="top-border">
+       <tr class="application top-border">
         <td class="tool">Crating</td>
       </tr>
 
-      <tr class="top-border">
+      <tr class="application top-border">
         <td class="tool">Metal Wall Skinning</td>
       </tr>
 
-      <tr class="top-border">
+      <tr class="application top-border">
         <td class="tool">Roof Stiching (Metal to Metal)</td>
       </tr>
 
-      <tr class="top-border">
+      <tr class="application top-border">
         <td class="tool">Sheet Metal Applications</td>
       </tr>
 
-      <tr class="top-border">
+      <tr class="application top-border">
         <td class="tool">Steel to Steel Framing</td>
       </tr>
 
-      <tr class="top-border">
+      <tr class="application top-border">
         <td class="tool">Wood to Steel Applications </td>
       </tr>
 
-       <tr class="top-border">
+       <tr class="application top-border">
         <td class="tool">Steel to Wood Applications </td>
       </tr>
 
-      <tr class="top-border">
+      <tr class="application top-border">
         <td class="tool">Metal Roofing</td>
       </tr>
 
-      <tr class="top-border">
+      <tr class="application top-border">
         <td class="tool">Siding</td>
       </tr>
 
-      <tr class="top-border">
+      <tr class="application top-border">
         <td class="tool">HVAC</td>
       </tr>
 
-      <tr class="top-border">
+      <tr class="application top-border">
         <td class="tool">Trailer Floor Restoration </td>
       </tr>
 
-      <tr class="top-border">
+      <tr class="application top-border">
         <td class="tool">Trailer Floor Fabrication </td>
       </tr>
 
-      <tr class="top-border">
+      <tr class="application top-border">
         <td class="tool">Utility Trailer Fabrication</td>
       </tr>
 
-      <tr class="top-border">
+      <tr class="application top-border">
         <td class="tool">Mezzanine Flooring</td>
       </tr>
 
-      <tr class="top-border">
+      <tr class="application top-border">
         <td class="tool">Bus Fabrication</td>
       </tr>
 
-       <tr class="top-border">
+       <tr class="application top-border">
         <td class="tool">Recreational Vehicles Fabrication</td>
       </tr>
 
-      <tr class="top-border">
+      <tr class="application top-border">
         <td class="tool">Commercial Vehicles</td>
       </tr>
   </table>
 
   <div id="table-container">
     <table id="scroll">
-      <tr>
-        <th id="CH7390" class="CH7390"><%= link_to "CH7390", products_tool_path(:id=>1) %></th>
-        <th class="CH7392SF"><%= link_to "CH7392SF", products_tool_path(:id=>1) %></th>
-        <th class="CH7241DE"><%= link_to "CH7241DE", products_tool_path(:id=>2) %></th>
-        <th class="CH7241WU"><%= link_to "CH7241WU", products_tool_path(:id=>2) %></th>
-        <th class="CH7260"><%= link_to "CH7260", products_tool_path(:id=>3) %></th>
-        <th class="CH7263"><%= link_to "CH7263", products_tool_path(:id=>3) %></th>
-        <th class="CH7264"><%= link_to "CH7264", products_tool_path(:id=>3) %></th>
-        <th class="CH7265"><%= link_to "CH7265", products_tool_path(:id=>3) %></th>
-        <th class="VL62-ED"><%= link_to "VL62-ED", products_tool_path(:id=>9) %></th>
-        <th id="VL62-SH" class="VL62-SH"><%= link_to "VL62-SH", products_tool_path(:id=>9) %></th>
-        <th class="VL62-EF"><%= link_to "VL62-EF", products_tool_path(:id=>9) %></th>
-        <th class="VL62-LP"><%= link_to "VL62-LP", products_tool_path(:id=>9) %></th>
-        <th class="VL62-SP"><%= link_to "VL62-SP", products_tool_path(:id=>9) %></th>
-        <th class="FDVL41"><%= link_to "FDVL41", products_tool_path(:id=>5) %></th>
-        <th class="HDVL71"><%= link_to "HDVL71", products_tool_path(:id=>6) %></th>
-        <th class="FLVL41"><%= link_to "FLVL41", products_tool_path(:id=>4) %></th>
-        <th class="LWVL32"><%= link_to "LWVL32", products_tool_path(:id=>7) %></th>
-        <th class="LHVL32"><%= link_to "LHVL32", products_tool_path(:id=>9) %></th>
-      </tr>
+      <div>
+        <tr class="top-header">
+          <th id="CH7390" class="CH7390"><%= link_to "CH7390", products_tool_path(:id=>1) %></th>
+          <th class="CH7392SF"><%= link_to "CH7392SF", products_tool_path(:id=>1) %></th>
+          <th class="CH7241DE"><%= link_to "CH7241DE", products_tool_path(:id=>2) %></th>
+          <th class="CH7241WU"><%= link_to "CH7241WU", products_tool_path(:id=>2) %></th>
+          <th class="CH7260"><%= link_to "CH7260", products_tool_path(:id=>3) %></th>
+          <th class="CH7263"><%= link_to "CH7263", products_tool_path(:id=>3) %></th>
+          <th class="CH7264"><%= link_to "CH7264", products_tool_path(:id=>3) %></th>
+          <th class="CH7265"><%= link_to "CH7265", products_tool_path(:id=>3) %></th>
+          <th class="VL62-ED"><%= link_to "VL62-ED", products_tool_path(:id=>9) %></th>
+          <th id="VL62-SH" class="VL62-SH"><%= link_to "VL62-SH", products_tool_path(:id=>9) %></th>
+          <th class="VL62-EF"><%= link_to "VL62-EF", products_tool_path(:id=>9) %></th>
+          <th class="VL62-LP"><%= link_to "VL62-LP", products_tool_path(:id=>9) %></th>
+          <th class="VL62-SP"><%= link_to "VL62-SP", products_tool_path(:id=>9) %></th>
+          <th class="FDVL41"><%= link_to "FDVL41", products_tool_path(:id=>5) %></th>
+          <th class="HDVL71"><%= link_to "HDVL71", products_tool_path(:id=>6) %></th>
+          <th class="FLVL41"><%= link_to "FLVL41", products_tool_path(:id=>4) %></th>
+          <th class="LWVL32"><%= link_to "LWVL32", products_tool_path(:id=>7) %></th>
+          <th class="LHVL32"><%= link_to "LHVL32", products_tool_path(:id=>9) %></th>
+        </tr>
 
-      <tr>
-        <td class="CH7390">1-1/2 to 3</td>
-        <td class="CH7392SF">1 - 2</td>
-        <td class="CH7241DE">3/4 to 1-5/8</td>
-        <td class="CH7241WU">3/4 to 1-5/8</td>
-        <td class="CH7260">1-1/4 to 1-1/2</td>
-        <td class="CH7263">3/4 to 1</td>
-        <td class="CH7264">3/4 to 1 </td>
-        <td class="CH7265">1-1/4 to 1-1/2</td>
-        <td class="VL62-ED">1 to 3</td>
-        <td class="VL62-SH">7/8 to 1-3/4</td>
-        <td class="VL62-EF">1 to 3</td>
-        <td class="VL62-LP">1-5/8 to 2-1/2</td>
-        <td class="VL62-SP">3/4 to 1-3/4</td>
-        <td class="FDVL41">1 to 3</td>
-        <td class="HDVL71">1 to 4</td>
-        <td class="FLVL41">1 to 3</td>
-        <td class="LWVL32">3/4 to 1-3/4 </td>
-        <td class="LHVL32">3/4 to 1-3/5</td>
-      </tr>
+        <tr class="top-header">
+          <td class="CH7390">1-1/2 to 3</td>
+          <td class="CH7392SF">1 - 2</td>
+          <td class="CH7241DE">3/4 to 1-5/8</td>
+          <td class="CH7241WU">3/4 to 1-5/8</td>
+          <td class="CH7260">1-1/4 to 1-1/2</td>
+          <td class="CH7263">3/4 to 1</td>
+          <td class="CH7264">3/4 to 1 </td>
+          <td class="CH7265">1-1/4 to 1-1/2</td>
+          <td class="VL62-ED">1 to 3</td>
+          <td class="VL62-SH">7/8 to 1-3/4</td>
+          <td class="VL62-EF">1 to 3</td>
+          <td class="VL62-LP">1-5/8 to 2-1/2</td>
+          <td class="VL62-SP">3/4 to 1-3/4</td>
+          <td class="FDVL41">1 to 3</td>
+          <td class="HDVL71">1 to 4</td>
+          <td class="FLVL41">1 to 3</td>
+          <td class="LWVL32">3/4 to 1-3/4 </td>
+          <td class="LHVL32">3/4 to 1-3/5</td>
+        </tr>
 
-      <tr>
-        <td class="CH7390"># 6 to # 10</td>
-        <td class="CH7392SF"># 6 to # 8</td>
-        <td class="CH7241DE"># 6 to # 8</td>
-        <td class="CH7241WU"># 6 to # 8</td>
-        <td class="CH7260"># 10 to # 12</td>
-        <td class="CH7263"># 10 to # 12</td>
-        <td class="CH7264"># 10 to # 12</td>
-        <td class="CH7265"># 10 to # 12</td>
-        <td class="VL62-ED"># 6 to # 10</td>
-        <td class="VL62-SH"># 6 to # 10</td>
-        <td class="VL62-EF"># 6 to # 10</td>
-        <td class="VL62-LP"># 6 to # 10</td>
-        <td class="VL62-SP"># 6 to # 10</td>
-        <td class="FDVL41"># 6 to # 10</td>
-        <td class="HDVL71"># 12 to # 14</td>
-        <td class="FLVL41"># 12 to # 14</td>
-        <td class="LWVL32"># 6 to # 8</td>
-        <td class="LHVL32"># 8 to # 10</td>
-      </tr>
+        <tr class="top-header">
+          <td class="CH7390"># 6 to # 10</td>
+          <td class="CH7392SF"># 6 to # 8</td>
+          <td class="CH7241DE"># 6 to # 8</td>
+          <td class="CH7241WU"># 6 to # 8</td>
+          <td class="CH7260"># 10 to # 12</td>
+          <td class="CH7263"># 10 to # 12</td>
+          <td class="CH7264"># 10 to # 12</td>
+          <td class="CH7265"># 10 to # 12</td>
+          <td class="VL62-ED"># 6 to # 10</td>
+          <td class="VL62-SH"># 6 to # 10</td>
+          <td class="VL62-EF"># 6 to # 10</td>
+          <td class="VL62-LP"># 6 to # 10</td>
+          <td class="VL62-SP"># 6 to # 10</td>
+          <td class="FDVL41"># 6 to # 10</td>
+          <td class="HDVL71"># 12 to # 14</td>
+          <td class="FLVL41"># 12 to # 14</td>
+          <td class="LWVL32"># 6 to # 8</td>
+          <td class="LHVL32"># 8 to # 10</td>
+        </tr>
 
-      <tr>
-        <td class="CH7390">2500</td>
-        <td class="CH7392SF">4000</td>
-        <td class="CH7241DE">4000</td>
-        <td class="CH7241WU">2500</td>
-        <td class="CH7260">2500</td>
-        <td class="CH7263">2500</td>
-        <td class="CH7264">2500</td>
-        <td class="CH7265">2500</td>
-        <td class="VL62-ED">1700</td>
-        <td class="VL62-SH">1700</td>
-        <td class="VL62-EF">1700</td>
-        <td class="VL62-LP">2800</td>
-        <td class="VL62-SP">2800</td>
-        <td class="FDVL41">2800</td>
-        <td class="HDVL71">900 to 2300</td>
-        <td class="FLVL41">2400</td>
-        <td class="LWVL32">2700 / 4500</td>
-        <td class="LHVL32">2700 / 4500</td>
-      </tr>
+        <tr class="top-header">
+          <td class="CH7390">2500</td>
+          <td class="CH7392SF">4000</td>
+          <td class="CH7241DE">4000</td>
+          <td class="CH7241WU">2500</td>
+          <td class="CH7260">2500</td>
+          <td class="CH7263">2500</td>
+          <td class="CH7264">2500</td>
+          <td class="CH7265">2500</td>
+          <td class="VL62-ED">1700</td>
+          <td class="VL62-SH">1700</td>
+          <td class="VL62-EF">1700</td>
+          <td class="VL62-LP">2800</td>
+          <td class="VL62-SP">2800</td>
+          <td class="FDVL41">2800</td>
+          <td class="HDVL71">900 to 2300</td>
+          <td class="FLVL41">2400</td>
+          <td class="LWVL32">2700 / 4500</td>
+          <td class="LHVL32">2700 / 4500</td>
+        </tr>
 
-      <tr class="fix1 top-border">
-        <td class="CH7390">Strip</td>
-        <td class="CH7392SF">Strip</td>
-        <td class="CH7241DE">Strip</td>
-        <td class="CH7241WU">Strip</td>
-        <td class="CH7260">Strip</td>
-        <td class="CH7263">Strip</td>
-        <td class="CH7264">Strip</td>
-        <td class="CH7265">Strip</td>
-        <td class="VL62-ED">Coil</td>
-        <td class="VL62-SH">Coil</td>
-        <td class="VL62-EF">Coil</td>
-        <td class="VL62-LP">Coil</td>
-        <td class="VL62-SP">Coil</td>
-        <td class="FDVL41">Coil</td>
-        <td class="HDVL71">Coil</td>
-        <td class="FLVL41">Coil</td>
-        <td class="LWVL32">Coil</td>
-        <td class="LHVL32">Coil</td>
-      </tr>
+        <tr class="fix1 top-border top-header">
+          <td class="CH7390">Strip</td>
+          <td class="CH7392SF">Strip</td>
+          <td class="CH7241DE">Strip</td>
+          <td class="CH7241WU">Strip</td>
+          <td class="CH7260">Strip</td>
+          <td class="CH7263">Strip</td>
+          <td class="CH7264">Strip</td>
+          <td class="CH7265">Strip</td>
+          <td class="VL62-ED">Coil</td>
+          <td class="VL62-SH">Coil</td>
+          <td class="VL62-EF">Coil</td>
+          <td class="VL62-LP">Coil</td>
+          <td class="VL62-SP">Coil</td>
+          <td class="FDVL41">Coil</td>
+          <td class="HDVL71">Coil</td>
+          <td class="FLVL41">Coil</td>
+          <td class="LWVL32">Coil</td>
+          <td class="LHVL32">Coil</td>
+        </tr>
 
-      <tr class="fix2 top-border">
-        <td class="CH7390">n/a</td>
-        <td class="CH7392SF">n/a</td>
-        <td class="CH7241DE">n/a</td>
-        <td class="CH7241WU">n/a</td>
-        <td class="CH7260">n/a</td>
-        <td class="CH7263">n/a</td>
-        <td class="CH7264">n/a</td>
-        <td class="CH7265">n/a</td>
-        <td class="VL62-ED">bbm/side</td>
-        <td class="VL62-SH">side</td>
-        <td class="VL62-EF">bbm/side</td>
-        <td class="VL62-LP">side</td>
-        <td class="VL62-SP">side</td>
-        <td class="FDVL41">btm</td>
-        <td class="HDVL71">btm</td>
-        <td class="FLVL41">btm</td>
-        <td class="LWVL32">side</td>
-        <td class="LHVL32">side</td>
-      </tr>
+        <tr class="fix2 top-border top-header">
+          <td class="CH7390">n/a</td>
+          <td class="CH7392SF">n/a</td>
+          <td class="CH7241DE">n/a</td>
+          <td class="CH7241WU">n/a</td>
+          <td class="CH7260">n/a</td>
+          <td class="CH7263">n/a</td>
+          <td class="CH7264">n/a</td>
+          <td class="CH7265">n/a</td>
+          <td class="VL62-ED">bbm/side</td>
+          <td class="VL62-SH">side</td>
+          <td class="VL62-EF">bbm/side</td>
+          <td class="VL62-LP">side</td>
+          <td class="VL62-SP">side</td>
+          <td class="FDVL41">btm</td>
+          <td class="HDVL71">btm</td>
+          <td class="FLVL41">btm</td>
+          <td class="LWVL32">side</td>
+          <td class="LHVL32">side</td>
+        </tr>
+      </div>
 
       <div id="tools">
       <!-- Fastening Sub Floor (wood/cement boards) -->
@@ -944,7 +946,7 @@ with our Auto Feed Screw Driving systems at your disposal.</h3>
           <td class="LWVL32"></td>
           <td class="LHVL32"></td>
         </tr>
-      </div>
+
         <!-- Utility Trailer Fabrication-->
         <tr class="tool top-border">
           <td class="CH7390"></td>
@@ -966,7 +968,7 @@ with our Auto Feed Screw Driving systems at your disposal.</h3>
           <td class="LWVL32"></td>
           <td class="LHVL32"></td>
         </tr>
-      </div>
+
 
         <!-- Mezzanine Flooring-->
         <tr class="tool top-border">
@@ -989,7 +991,7 @@ with our Auto Feed Screw Driving systems at your disposal.</h3>
           <td class="LWVL32"></td>
           <td class="LHVL32"></td>
         </tr>
-      </div>
+
 
         <!-- Bus Fabrication Vehicles-->
         <tr class="tool top-border">
@@ -1012,7 +1014,7 @@ with our Auto Feed Screw Driving systems at your disposal.</h3>
           <td class="LWVL32"></td>
           <td class="LHVL32"></td>
         </tr>
-      </div>
+
 
         <!-- Recreational Vehicles Fabrication -->
         <tr class="tool top-border">
@@ -1035,7 +1037,7 @@ with our Auto Feed Screw Driving systems at your disposal.</h3>
           <td class="LWVL32"></td>
           <td class="LHVL32"></td>
         </tr>
-      </div>
+
 
         <!-- Commercial Vehicles-->
         <tr class="tool top-border">
