--- a/app/views/customer_service/faqs.html.erb
+++ b/app/views/customer_service/faqs.html.erb
@@ -1,5 +1,5 @@
 <h2 class="heading">FREQUENTLY ASKED QUESTIONS</h2>
-<p>See if your question has already been answered below in this list of Frequently Asked Questiions if you don’t find your question here feel free to visit our <strong><a href="">Contact Section</a></strong> and connect with us through our online form. </p>
+<p>See if your question has already been answered below in this list of Frequently Asked Questiions if you don’t find your question here feel free to visit our <strong><a href="<%= contact_path %>">Contact Section</a></strong> and connect with us through our online form. <br><br>Muro attachments can only be mounted to a Drywall Screw Guns (the unit must have a clutch). Mounting hardware is unique to each Brand and model. Please <strong><a href="">click here</a></strong> to see which models we can mount to. <br><br><strong><a href="">Click here</a></strong>to be connected to the adapter summary. Please refer to the <strong><a href="<%= customer_service_product_manuals_path %>">Tool Manuals</a></strong> for more details.</p>
 
 
 <div class="faq group">
