--- a/app/views/customer_service/testimonials.html.erb
+++ b/app/views/customer_service/testimonials.html.erb
@@ -2,26 +2,66 @@
   <p>Hear what people are saying about Muro North America. The feedback on our customer service and product quality speaks for itself...</p>
 
 <div class="testimonial group">
-  <img class="display" src="/customer_service/silhouette.png" alt="">
+<!--   <img class="display" src="/customer_service/silhouette.png" alt=""> -->
   <div class="quote">
-    <h3>John Smith</h3>
-    <h4>Leading Industries</h4>
+    <h3>Glen Tombs - Owner</h3>
+    <h4>G. Tombs Sanding</h4>
+    <h5>Georgetown, Ontario</h5>
     <div class="hanging-quote group">
       <img class="punctuation" src="/customer_service/first-punctuation.png" alt="">
-      <p>If you are looking for performance, Muro’s products and customer service are exceptional. I've tried them all, Muro is the best by far.</p>
+      <p>I have been using Muro for more than 15 years, and just so you know there are many reasons why we have been together for so long. Trust, dependability and service are important to me. <br><br>I drive around 1 million screws per year so I need reliable equipment to meet the rigors of my day to day work. The team at Muro delivers what I need to make it easier for me to get all my jobs completed.</p>
       <img class="punctuation last" src="/customer_service/last-punctuation.png" alt="">
     </div>
   </div>
 </div>
 
 <div class="testimonial">
-  <img class="display" src="/customer_service/silhouette.png" alt="">
   <div class="quote">
-    <h3>Leslie Finch</h3>
-    <h4>The Reputable Company.</h4>
+    <h3>Joe Goeglein – DBE Liaison Officer</h3>
+    <h4>Federal Coach - Forest River Bus</h4>
+    <h5>Goshen, Indiana</h5>
     <div class="hanging-quote group">
       <img class="punctuation" src="/customer_service/first-punctuation.png" alt="">
-      <p>Tool is a work horse - watched it tumble down the steps fall in the salt water - dried it out and still using today!" Man, I have lots of tools but my Muro goes to every job.</p>
+      <p>Some decisions really are “no brainers.”  Switching to Muro’s stand-up screw gun was one of them.  Instead of kneeling on the floorboard and using elbow-grease every eight inches, the employees now stand upright and allow the weight of the screw-gun to do most of the labor.  This has resulted in increased throughput and a probable eduction in workmen comp claims - zero since we began using Muro 5 years ago.  Definitely worth testing.</p>
+      <img class="punctuation last" src="/customer_service/last-punctuation.png" alt="">
+    </div>
+  </div>
+</div>
+
+<div class="testimonial">
+  <div class="quote">
+    <h3>Dan Williams – Maintenance Supervisor,</h3>
+    <h4>Federal Coach - Forest River Bus</h4>
+    <h5>Goshen, Indiana</h5>
+    <div class="hanging-quote group">
+      <img class="punctuation" src="/customer_service/first-punctuation.png" alt="">
+      <p>Out of the many we have tried here at Forest River, yours is the best product to have been purchased. We have a total of five running a day at all times, screwing our floors down in our large buses onto the steel frames. The product withstands the pressure and abuse of the hardworking linemen. We appreciate your product and will continue using for a very long time!</p>
+      <img class="punctuation last" src="/customer_service/last-punctuation.png" alt="">
+    </div>
+  </div>
+</div>
+
+<div class="testimonial">
+  <div class="quote">
+    <h3>Brian Lotz – Outside Sales</h3>
+    <h4>Timber Holdings</h4>
+    <h5>Bedford, New Hampshire</h5>
+    <div class="hanging-quote group">
+      <img class="punctuation" src="/customer_service/first-punctuation.png" alt="">
+      <p>Brian has and continues to recommend the Muro Screw system for use with our Iron Woods brand decking. We have found that the Ejector screws do an outstanding job of fastening Ipe without predrilling in both commercial and residential applications. We would not hesitate to recommend this system to any contractor looking for a reliable self-drilling collated screw system for hardwoods decking.</p>
+      <img class="punctuation last" src="/customer_service/last-punctuation.png" alt="">
+    </div>
+  </div>
+</div>
+
+<div class="testimonial">
+  <div class="quote">
+    <h3>Scott Zide - President</h3>
+    <h4>Creative Home Improvements Inc</h4>
+    <h5>Framingham, MA</h5>
+    <div class="hanging-quote group">
+      <img class="punctuation" src="/customer_service/first-punctuation.png" alt="">
+      <p>Awesome product, nothing else compares... The Muro tool is pure genius… Love the telescopic extension handle, it makes operating the tool so comfortable.</p>
       <img class="punctuation last" src="/customer_service/last-punctuation.png" alt="">
     </div>
   </div>
