--- a/app/views/distributors/international.html.erb
+++ b/app/views/distributors/international.html.erb
@@ -17,8 +17,8 @@
       <p>
         Phone: 03 9706 4344<br>
         Fax: 03 9768 3329<br>
-        Email: sales@iccons.com.au<br>
-        Website: www.iccons.com.au
+        Email: <a href="mailto:sales@iccons.com.au">sales@iccons.com.au</a><br>
+        Website: <a href="http://www.iccons.com.au">www.iccons.com.au</a>
       </p>
     </div>
 
@@ -32,8 +32,8 @@
       <p>
         Tel: + 61 03 8795 4600 <Br>
         Fax: + 61 03 8787 5899 <Br>
-        Email: info@powers.com.au<Br>
-        Web: www.powers.com.au<Br>
+        Email: <a href="mailto:info@powers.com.au">info@powers.com.au</a><Br>
+        Web: <a href="www.powers.com.au">www.powers.com.au</a><Br>
       </p>
     </div>
   </div>
@@ -53,8 +53,8 @@
       <p>
         Tel: + 31 0 320 29 55 55<br>
         Fax: +31 0 320 29 55 34<br>
-        Email: info@verpa-senco.com<br>
-        Web: www.verpa-senco.com<br>
+        Email: <a href="mailto:info@verpa-senco.com">info@verpa-senco.com</a><br>
+        Web: <a href="www.verpa-senco.com">www.verpa-senco.com</a><br>
       </p>
     </div>
   </div>
@@ -73,8 +73,8 @@
       <p>
         Tel: + 64 9 828 2777<br>
         Fax: + 64 9 828 2424<br>
-        Email: tait@fortressfasteners.co.nz<br>
-        Web: www.fortressfasteners.co.nz
+        Email: <a href="mailto:tait@fortressfasteners.co.nz">tait@fortressfasteners.co.nz</a><br>
+        Web: <a href="www.fortressfasteners.co.nz">www.fortressfasteners.co.nz</a>
       <p>
     </div>
     </p>
@@ -95,8 +95,8 @@
       <p>
         Tel: (192) 544-5566 <br>
         Fax: (192) 541-8873<br>
-        Email:sales@poppers-senco.co.uk<br>
-        Web: www.poppers-senco.co.uk
+        Email:<a href="mailto:sales@poppers-senco.co.uk">sales@poppers-senco.co.uk</a><br>
+        Web: <a href="www.poppers-senco.co.uk">www.poppers-senco.co.uk</a>
       </p>
     </div>
   </div>
@@ -115,8 +115,8 @@
       <p>
         Tel:+ 47 9 824 7476<br>
         Fax: + 47 2 272 1078<br>
-        Email: firmapost@motek.no<br>
-        Web: www.motek.no
+        Email: <a href="mailto:firmapost@motek.no">firmapost@motek.no</a><br>
+        Web: <a href="www.motek.no">www.motek.no/</a>
       </p>
     </div>
   </div>
@@ -136,8 +136,8 @@
       <p>
         Tel: + 32 3 355 0353<br>
         Fax: + 32 3 355 0373<br>
-        Email:info@cerclindus.be<br>
-        Web: www.cerclindus.be
+        Email:<a href="mailto:info@cerclindus.be">info@cerclindus.be</a><br>
+        Web: <a href="www.cerclindus.be">www.cerclindus.be</a>
       </p>
     </div>
   </div>
@@ -155,8 +155,8 @@
 
       <p>
         Tel/Fax: + 33 04 50 32 3105<br>
-        Email: ericana@free.fr<br>
-        Web: www.muro.com
+        Email: <a href="mailto:ericana@free.fr">ericana@free.fr</a><br>
+        Web: <a href="www.muro.com">www.muro.com</a>
       </p>
     </div>
   </div>
