--- a/app/views/products/screws/show-backup.html.erb
+++ b/app/views/products/screws/show-backup.html.erb
@@ -4,7 +4,7 @@
   <ul class="screw-links">
     <a href="#drywall-fine-thread"><li>Drywall Screws - Fine thread (Drywall or Wood to Light Gauge Steel)</li></a>
     <a href="#drywall-coarse-thread"><li>Drywall Screws - Coarse thread (Drywall or Wood to Wood)</li></a>
-    <a href="#subfloor-underlayment"><li>Sub-Floor And Underlayment Screws (Wood to Wood)</li></a>
+    <a href="#subfloor-underlayment"><li>Subfloor And Underlayment Screws (Wood to Wood)</li></a>
     <a href="#self-drilling"><li>Self Drilling Screws (Wood To Metal) </li></a>
     <a href="#exterior-deck"><li>Exterior Deck Screws</li></a>
     <a href="#shroomless"><li>Shroom-less Screws For Composite Deck</li></a>
@@ -117,9 +117,9 @@
   </table>
 </div>
 
-<div class="screw" id="sub-floor-underlayment">
-  <h2>Sub-Floor And Underlayment Screws (Wood to Wood)</h2>
-  <img src="/products/screws/individual/sub-floor-square.png" alt="Sub-Floor And Underlayment  Screws (Wood to Wood) Robertson Screw">
+<div class="screw" id="Subfloor-underlayment">
+  <h2>Subfloor And Underlayment Screws (Wood to Wood)</h2>
+  <img src="/products/screws/individual/Subfloor-square.png" alt="Subfloor And Underlayment  Screws (Wood to Wood) Robertson Screw">
 
   <table class="screw-table">
     <tr class="bold headers">
@@ -190,8 +190,8 @@
   </table>
 </div>
 
-<div class="screw" id="sub-floor-underlayment">
-  <img src="/products/screws/individual/sub-floor-phillips.png" alt="Sub-Floor And Underlayment Screws (Wood to Wood) Phillips Screw">
+<div class="screw" id="Subfloor-underlayment">
+  <img src="/products/screws/individual/Subfloor-phillips.png" alt="Subfloor And Underlayment Screws (Wood to Wood) Phillips Screw">
 
   <table class="screw-table">
     <tr class="bold headers">
