--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -1,60 +1,3 @@
-	/*----------------------------------------------------
-	------------------------------------------------------
-	Fix Styles
-	-----------------------------------------------------
-	---------------------------------------------------*/
-
-	.group:before,
-	.group:after {
-		content: "";
-		display: table;
-	}
-	.group:after {
-		clear: both;
-	}
-	.group{
-	  *zoom: 1;
-	}
-
-	.no-margin-left, .no-left {
-		margin-left: 0 !important;
-	}
-
-	.no-margin-top {
-		margin-top: 0 !important;
-	}
-
-	.move-up {
-		margin-top: -50px;
-	}
-
-	.clear {
-		clear: both;
-	}
-
-	.top-space {
-		clear: both;
-		margin-top: 30px !important;
-	}
-
-	.center {
-		text-align: center;
-	}
-
-	/*----------------------------------------------------
-	------------------------------------------------------
-	Buttons
-	-----------------------------------------------------
-	---------------------------------------------------*/
-
-
-
-	/*----------------------------------------------------
-	------------------------------------------------------
-	-----------------------------------------------------
-	---------------------------------------------------*/
-
-
 
 	.bullet li {
 		list-style-type: disc;
@@ -792,6 +735,7 @@ thead {
 }
 
 
+
 th, td  {
 	padding: 10px 0 0px;
 	background: #464646;
@@ -803,6 +747,26 @@ th, td  {
 	}
 }
 
+tr.top-header {
+	th, td {
+		background: #464646;
+
+		&:nth-child(even) {
+			background: #303030;
+		}
+	}
+}
+
+tr.tool {
+	th, td {
+		background: #595959;
+
+
+		&:nth-child(even) {
+			background: #3f3f3f;
+		}
+	}
+}
 
 
 tr.top-border {
@@ -850,8 +814,4 @@ td.tool {
 #application table .white {
 	background: none;
 }
-
-
-
-
 
