Updated FAQs page.

--- a/app/views/applications/more_applications.html.erb
+++ b/app/views/applications/more_applications.html.erb
@@ -451,10 +451,10 @@
           <td class="CH7263"></td>
           <td class="CH7264"></td>
           <td class="CH7265"></td>
-          <td class="VL62-ED"><img src="/applications/more_applications/check.png" alt=""></td>
+          <td class="VL62-ED"><img src="/applications/more_applications/check.png" alt=""> VL62-ED</td>
           <td class="VL62-SH"></td>
           <td class="VL62-EF"></td>
-          <td class="VL62-LP"><img src="/applications/more_applications/check.png" alt=""> VL62-ED</td>
+          <td class="VL62-LP"><img src="/applications/more_applications/check.png" alt=""> VL62-LP</td>
           <td class="VL62-SP"></td>
           <td class="FDVL41"><img src="/applications/more_applications/check.png" alt=""> FDVL41</td>
           <td class="HDVL71"></td>
