--- a/app/views/customer_service/testimonials.html.erb
+++ b/app/views/customer_service/testimonials.html.erb
@@ -48,7 +48,7 @@
     <h5>Bedford, New Hampshire</h5>
     <div class="hanging-quote group">
       <img class="punctuation" src="/customer_service/first-punctuation.png" alt="">
-      <p>Brian has and continues to recommend the Muro Screw system for use with our Iron Woods brand decking. We have found that the Ejector screws do an outstanding job of fastening Ipe without predrilling in both commercial and residential applications. We would not hesitate to recommend this system to any contractor looking for a reliable self-drilling collated screw system for hardwoods decking.</p>
+      <p>We have and continue to recommend the Muro Screw system for use with our Iron Woods brand decking. We have found that the Ejector screws do an outstanding job of fastening Ipe without predrilling in both commercial and residential applications. We would not hesitate to recommend this system to any contractor looking for a reliable self-drilling collated screw system for hardwoods decking.</p>
       <img class="punctuation last" src="/customer_service/last-punctuation.png" alt="">
     </div>
   </div>
