Updated Ejector screws.

--- a/app/assets/stylesheets/customer_service.scss
+++ b/app/assets/stylesheets/customer_service.scss
@@ -1,7 +1,8 @@
 .list-four {
   margin-top: 50px;
+
   .block {
-    width: 25%;
+    width: 20%;
     float: left;
   }
 
@@ -9,6 +10,7 @@
     margin-bottom: 1em;
     text-align: center;
     font-family: 'Helvetica-Bold';
+    font-size: .9em;
   }
 }
 
