--- a/app/views/customer_service/index.html.erb
+++ b/app/views/customer_service/index.html.erb
@@ -13,6 +13,11 @@
   </div>
 
   <div class="block">
+    <h3><%= link_to "Parts List and Schematics", "http://www.vislider.com/library/mna/partslist/us-ca_partslist.html", :target=>"_blank" %></h3>
+    <a href="http://www.vislider.com/library/mna/partslist/us-ca_partslist.html"><img class="select" src="/customer_service/gears.png" target="_blank" alt="Parts List and Schematics"></a>
+  </div>
+
+  <div class="block">
     <h3><%= link_to "Product Registration", customer_service_product_registration_path %></h3>
     <a href="<%= customer_service_product_registration_path %>"><img class="select" src="/customer_service/product_registration.png" alt="Product Registration"></a>
   </div>
